--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
 
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app"/>
-    <title>MultiVerse</title>
+    <title>Todo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
